# plover_plugins_manager

./: MANIFEST.in  README.md  README.rst  pyproject.toml  pyuic.json  setup.cfg  setup.py  tox.ini
plover_plugins_manager/: __main__.py  global_registry.py  local_registry.py  package_index.py  pip_wrapper.py  plugin_metadata.py  registry.py  requests.py  utils.py
plover_plugins_manager/gui_qt/: console_widget.py  info_browser.py  manager.py  manager.ui  resources_rc.py  run_dialog.py  run_dialog.ui
plover_plugins_manager/gui_qt/resources/: resources.qrc
test/: __init__.py  conftest.py  plover_template_system-0.1.0-py2.py3-none-any.whl  plover_template_system-0.1.0-py3-none-any.whl  plover_template_system-0.2.0-py2.py3-none-any.whl  plover_template_system-0.2.0-py3-none-any.whl  requirements.txt  test_global_registry.py  test_installs.py  test_registry.py  tox_pip.py
test/data/: prefix.sh  prefix.tar
