[metadata]
name = plover_plugins_manager
version = 0.5.14
description = Plugins manager for Plover
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_plugins_manager
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.4
install_requires =
	pip
	pkginfo>=1.4.2
	plover[gui_qt]>=4.0.0.dev8
	pygments
	readme-renderer[md]
	requests>=2.0.0
	requests-cache>=0.4.11
	requests-futures>=0.9.8
	setuptools
	wheel
tests_require =
	pytest
	pytest-shutil
packages =
	plover_plugins_manager
	plover_plugins_manager.gui_qt

[options.entry_points]
console_scripts =
	plover_plugins = plover_plugins_manager.__main__:main
plover.gui.qt.tool =
	plugins_manager = plover_plugins_manager.gui_qt.manager:PluginsManager

# vim: commentstring=#\ %s list
