[metadata]
name = plover_plugins_manager
version = 0.6.2
description = Plugins manager for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_plugins_manager
project_urls =
	Source Code = https://github.com/benoit-pierre/plover_plugins_manager
	Issue Tracker = https://github.com/benoit-pierre/plover_plugins_manager/issues
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	pip
	pkginfo>=1.4.2
	plover[gui_qt]>=4.0.0.dev8
	pygments
	readme-renderer[md]
	requests>=2.0.0
	requests-cache>=0.4.11
	requests-futures>=0.9.8
	setuptools
	wheel
packages =
	plover_plugins_manager
	plover_plugins_manager.gui_qt

[options.extras_require]
test =
	pytest
	pytest-shutil

[options.entry_points]
console_scripts =
	plover_plugins = plover_plugins_manager.__main__:main
plover.gui.qt.tool =
	plugins_manager = plover_plugins_manager.gui_qt.manager:PluginsManager

# vim: commentstring=#\ %s list
